# casturria_support

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh
.github/workflows/: ci.yml
src/: CMakeLists.txt  decoder.cpp  decoder.h  dummy.cpp  encoder.cpp  encoder.h  events.cpp  events.h  filter.cpp  filter.h  libcasturria_support.map  util.cpp
src/internal/: events.h  util.h
